--- a/Equation of a Slime.ipynb
+++ b/Equation of a Slime.ipynb
@@ -5,7 +5,7 @@
    "id": "e83102d2",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/profmcnich/example_notebook/blob/main/a3_sample_notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/mohfujulm/AI_Assignment3/blob/main/Equation%20of%20a%20Slime.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
